# moneysnake

./: .gitignore  CONTRIBUTORS.md  pyproject.toml
.github/workflows/: main.yaml  release.yaml  test.yaml
moneysnake/: __init__.py  client.py  contact.py  custom_field_model.py  document.py  exceptions.py  external_sales_invoice.py  financial_mutation.py  financial_statement.py  model.py  payment.py  purchase_invoice.py  receipt.py  sales_invoice.py  tax_rate.py
src/moneysnake/: __init__.py  client.py  client.pyi  contact.py  core.py  custom_field.py  test.py
tests/: conftest.py  test_contact.py  test_custom_field_model.py  test_exceptions.py  test_external_sales_invoice.py  test_financial_mutation.py  test_financial_mutation_search.py  test_financial_statement.py  test_model.py  test_pagination.py  test_payment.py  test_purchase_invoice.py  test_receipt.py  test_retry.py  test_sales_invoice.py  test_synchronizable.py  test_tax_rate.py
