[tool.poetry]
name = "moneysnake"
version = "0.0.3"
description = "Moneybird SDK for Python"
authors = ["ArjanCodes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
httpx = "^0.27.2"
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

