[project]
name = "moneysnake"
version = "0.2.4"
description = "Moneybird SDK for Python"
authors = [{ name = "ArjanCodes" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "types-pygments>=2.18.0.20240506",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
