[project]
name = "moneysnake"
version = "0.2.4"
description = "Moneybird SDK for Python"
authors = [{ name = "ArjanCodes" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "freezegun>=1.5.5",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.2",
    "types-pygments>=2.19.0.20251121",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
